2001-06-01  Peter Williams  <peterw@ximian.com>

	* autogen.sh: s,Gnome,$PKG_NAME,g

2001-04-13  Martin Baulig  <baulig@suse.de>

	* gnome-pkgconfig.m4 (GNOME_PKGCONFIG_CHECK_OPTIONAL_MODULES):
	Set variable `have_<name>' to yes or no depending on whether the
	module was found or not; allows you to define automake conditionals
	for optional modules.

2001-03-24  Martin Baulig  <baulig@suse.de>

	* autogen.sh: Add the xml-i18n-tools stuff here.

2000-12-01  Martin Baulig  <baulig@suse.de>

	* compile-warnings.m4: Improved compile warnings check; the
	--enable-compile-warnings parameter now takes 5 different
	values (no/minimum/yes/maximum/error). AC_SUBST(WARN_CFLAGS).

2000-11-29  Martin Baulig  <baulig@suse.de>

	* gnome.m4, gnome-gnorba-check.m4, gnome-fileutils.m4: Removed.

2000-11-26  Martin Baulig  <martin@home-of-linux.org>

	* gnome-x-checks.m4 (GNOME2_X_CHECKS): Use
	GNOME_PKGCONFIG_CHECK_MODULES.

	* gnome-pkgconfig.m4 (GNOME_PKGCONFIG_CHECK_VERSION): Don't
	AC_REQUIRE([GNOME_REQUIRE_PKGCONFIG]).
	(GNOME_CHECK_PKGCONFIG): Check for pkg-config >= 0.4.1.

2000-11-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-pkgconfig.m4: Added GNOME_PKGCONFIG_CHECK_OPTIONAL_MODULES
	to check for a list of optional modules.

	* gnome-platform.m4: Require GNOME_REQUIRE_PKGCONFIG.

2000-11-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-platform.m4: New file. This defines
	GNOME_PLATFORM_GNOME_2.

	* gnome-pkgconfig.m4: Disable the --extra-flags argument to
	pkg-config, this doesn't exist anymore.

2000-11-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-pkgconfig.m4: New file. This defines
	GNOME_CHECK_PKGCONFIG, GNOME_REQUIRE_PKGCONFIG and
	GNOME_PKGCONFIG_* macros from pkg-config.

2000-11-21  Martin Baulig  <baulig@suse.de>

	* gnome-support.m4, need-declaration.m4: Removed.

2000-09-30  Martin Baulig  <baulig@suse.de>

	* gnome-x-checks.m4: Switch to pkg-config to check for GTK+ 2.0;