@@ -28,6 +28,7 @@ AC_DEFUN([GNOME_PLATFORM_GNOME_2],[
 	if test $platform_gnome_2 = yes; then
 	    AC_MSG_RESULT(GNOME 2.x)
 	    GNOME_INTERFACE_VERSION=2
+	    GNOME_REQUIRE_PKGCONFIG
 	else
 	    AC_MSG_RESULT(GNOME 1.x)
 	    GNOME_INTERFACE_VERSION=1
